--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':sdk')
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
-
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.rmtheis:tess-two:6.0.3'
+    implementation files('libs/jxl.jar')
 }
