--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.u.opencv_android">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -32,9 +33,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".AverageBlur"></activity>
-        <activity android:name=".CannyEdgeDetector"></activity>
+        android:installLocation="auto"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".ChooseImageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,14 +48,7 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".GrayScaleConversion" />
-        <activity android:name=".AdjustBrightness" />
-        <activity android:name=".MedianBlur" />
-        <activity android:name=".changeColor" />
-        <activity android:name=".MirrorImage" />
-        <activity android:name=".GaussianBlur" />
-        <activity android:name=".SobelEdgeDetector" />
-        <activity android:name=".Histogram" />
+
     </application>
 
 </manifest>
